src/styles/global.css
@import "tailwindcss";
@import "./typography.css";

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

:root,
html[data-theme="light"] {
  --theme-bg-light: #fdfdfd;
  --theme-bg-dark: #000000;
  --background: var(--theme-bg-light);
  --foreground: #000000;
  --accent: #8c0000;
  --muted: #BE3D2A;
  --border: #a7a4a4;
}

html[data-theme="dark"] {
  --background: var(--theme-bg-dark);
  --foreground: #fdfdfd;
  --accent: #eea83e;
  --muted: #262749;
  --border: #763b0e;
}

@theme inline {
  --font-app: var(--font-playpen-sans);
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-accent: var(--accent);
  --color-muted: var(--muted);
  --color-border: var(--border);
}

@layer base {
  * {
    @apply border-border outline-accent/75;
    scrollbar-width: auto;
    scrollbar-color: var(--color-muted) transparent;
  }
  html {
    @apply overflow-y-scroll scroll-smooth;
  }
  body {
    @apply flex min-h-svh flex-col bg-background font-app text-foreground selection:bg-accent/75 selection:text-background;
  }
  a,
  button {
    @apply outline-offset-1 outline-accent focus-visible:no-underline focus-visible:outline-2 focus-visible:outline-dashed;
  }
  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

@utility max-w-app {
 @apply max-w-3xl xl:max-w-5xl;
}

@utility app-layout {
  @apply mx-auto w-full max-w-app px-4;
}

.active-nav {
  @apply underline decoration-wavy decoration-2 underline-offset-8;
}

/* Source: https://piccalil.li/blog/a-more-modern-css-reset/ */
/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 1rem;
}

